2009-09-14  Sancho Lerena <slerena@artica.es>

	* bin/pandora_server: Now uses $Config{"enterprise"} to know if
	enterprise is loaded, and don't try to call enterprise_hook if is not.
	I experience a high rate of inventory-enterprise hook errors in log.

	* SNMPServer.pm: Dont call snmp_get_trap2agent enterprise_hook if 
	not enterprise loaded.

	* DataServer.pm: Dont call process_inventory_data if not 
	enterprise loaded.

	* util/pandora_backup.sh: New command line backup and restore tool.


2009-09-07  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Fixed bad calculation of utimestamp limit
	purgin agent access data.

2009-09-04  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Updated dependency for sudo.

	* util/tentacle_serverd: su cannot work as expected in SLES11, so
	we fallback to sudo again.

2009-09-03  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed some warning on non init
	  variables.

	* lib/PandoraFMS/Core.pm: Now uses alert name instead alert description
	in event description.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Decode HTML entities for all alert types.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: HTML entities in alert fields are properly
	  decoded. Alert emails can be sent to multiple comma separated
	  addresses.

2009-09-02  Sancho Lerena <slerena@artica.es> 

	*  lib/PandoraFMS/PluginServer.pm, util/pandora_exec: Nagis plugin 
	support implemented and working.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the matches_value alert option (was not
	  working properly).

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Removed the inhibit_alerts configuration
	  token. Alert inhibition is configured on a per-agent basis.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>
